--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,13 @@
 
 <head>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
-
+	<link rel="icon" href="../images/favicon.png">
 	
-	<title>SDL2 / C</title>
+	<title>Graphics with C and SDL2</title>
 	
 	<meta charset="UTF-8">
 	<meta name="description" content="Graphics with C and SDL2"/>
-	<meta name = "keywords" content = "C, SDL2, SDL, graphics, drawing, line, circle, rectangle"/>
+	<meta name = "keywords" content = "C, SDL2, SDL, graphics, drawing, line, circle, rectangle, graphics with c, sdl graphics, software rendering"/>
 	<meta name="author" content="Marat Isaw"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+	<span id="page-start"></span>
 	<a class="github-fork-ribbon" href="https://github.com/xyl1t/SDL-Tutorial" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
 
 	<header>
@@ -34,90 +35,92 @@
 	<h2 id="sdl">SDL</h2>
 	<div class="content">
 		<article>
-			<h3>Title 1</h3>
-			<img src="../images/template.jpg" alt="Template image"/>
-			<p>Description 2 </p>
+			<a href="https://www.google.com/">
+				<h3>Setting up SDL</h3>
+				<div class="frame">
+					<img src="../images/SDL/SDL2Logo.png" alt="SDL2 logo"/>
+				</div>
+			</a>	
 		</article>
 		<article>
-			<h3>Title 2</h3>
-			<img src="../images/template.jpg" alt="Template image"/>
-			<p>Descriptio 1</p>
+			<a href="https://www.google.com">
+				<h3>Creating a window</h3>
+				<div class="frame">
+					<img src="../images/SDL/window.png" alt="SDL2 window"/>
+				</div>
+			</a>	
 		</article>
 		<article>
-			<h3>Title 3</h3>
-			<img src="../images/template.jpg" alt="Template image"/>
-			<p>Descriptio 1</p>
-		</article>
-		<article>
-			<h3>Title 4</h3>
-			<img src="../images/template.jpg" alt="Template image"/>
-			<p>Descriptio 1</p>
-		</article>
-		<article>
-			<h3>Title 5</h3>
-			<img src="../images/template.jpg" alt="Template image"/>
-			<p>Descriptio 1</p>
-		</article>
-		<article>
-			<h3>Title 6</h3>
-			<img src="../images/template.jpg" alt="Template image"/>
-			<p>Descriptio 1</p>
-		</article>
-		<article>
-			<h3>Title 7</h3>
-			<img src="../images/template.jpg" alt="Template image"/>
-			<p>Descriptio 1</p>
-		</article>
-		<article>
-			<h3>Title 8</h3>
-			<img src="../images/template.jpg" alt="Template image"/>
-			<p>Descriptio 1</p>
+			<a href="https://www.google.com">
+				<h3>Making a pixel buffer</h3>
+				<div class="frame">
+					<img src="../images/SDL/pixel-buffer.png" alt="Pixel buffer"/>
+				</div>
+			</a>	
 		</article>
 	</div>
 	
 	<h2 id="graphics">Graphics</h2>
 	<div class="content">
 		<article>
-			<h3>Title 1</h3>
-			<img src="../images/template.jpg" alt="Template image"/>
-			<p>Description 2 </p>
+			<a href="https://www.google.com">
+				<h3>Template</h3>
+				<div class="frame">
+					<img src="../images/template.jpg" alt="template image"/>
+				</div>
+			</a>	
 		</article>
 		<article>
-			<h3>Title 2</h3>
-			<img src="../images/template.jpg" alt="Template image"/>
-			<p>Descriptio 1</p>
+			<a href="https://www.google.com">
+				<h3>Template</h3>
+				<div class="frame">
+					<img src="../images/template.jpg" alt="template image"/>
+				</div>
+			</a>	
 		</article>
 		<article>
-			<h3>Title 3</h3>
-			<img src="../images/template.jpg" alt="Template image"/>
-			<p>Descriptio 1</p>
+			<a href="https://www.google.com">
+				<h3>Template</h3>
+				<div class="frame">
+					<img src="../images/template.jpg" alt="template image"/>
+				</div>
+			</a>	
 		</article>
 		<article>
-			<h3>Title 4</h3>
-			<img src="../images/template.jpg" alt="Template image"/>
-			<p>Descriptio 1</p>
+			<a href="https://www.google.com">
+				<h3>Template</h3>
+				<div class="frame">
+					<img src="../images/template.jpg" alt="template image"/>
+				</div>
+			</a>	
 		</article>
 		<article>
-			<h3>Title 5</h3>
-			<img src="../images/template.jpg" alt="Template image"/>
-			<p>Descriptio 1</p>
+			<a href="https://www.google.com">
+				<h3>Template</h3>
+				<div class="frame">
+					<img src="../images/template.jpg" alt="template image"/>
+				</div>
+			</a>	
 		</article>
 		<article>
-			<h3>Title 6</h3>
-			<img src="../images/template.jpg" alt="Template image"/>
-			<p>Descriptio 1</p>
+			<a href="https://www.google.com">
+				<h3>Template</h3>
+				<div class="frame">
+					<img src="../images/template.jpg" alt="template image"/>
+				</div>
+			</a>	
 		</article>
 		<article>
-			<h3>Title 7</h3>
-			<img src="../images/template.jpg" alt="Template image"/>
-			<p>Descriptio 1</p>
-		</article>
-		<article>
-			<h3>Title 8</h3>
-			<img src="../images/template.jpg" alt="Template image"/>
-			<p>Descriptio 1</p>
+			<a href="https://www.google.com">
+				<h3>Template</h3>
+				<div class="frame">
+					<img src="../images/template.jpg" alt="template image"/>
+				</div>
+			</a>	
 		</article>
 	</div>
+	
+	<a href="#page-start">Go to the beginning of the page</a>
 </body>
 
 </html>
