Website is now proper responsive

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
 	<div class="content">
 		<article>
 			<a href="https://www.google.com">
-				<h3>Template</h3>
+				<h3>Clearing the screen</h3>
 				<div class="frame">
 					<img src="../images/template.jpg" alt="template image"/>
 				</div>
@@ -72,7 +72,7 @@
 		</article>
 		<article>
 			<a href="https://www.google.com">
-				<h3>Template</h3>
+				<h3>Points</h3>
 				<div class="frame">
 					<img src="../images/template.jpg" alt="template image"/>
 				</div>
@@ -80,7 +80,7 @@
 		</article>
 		<article>
 			<a href="https://www.google.com">
-				<h3>Template</h3>
+				<h3>Rectangles</h3>
 				<div class="frame">
 					<img src="../images/template.jpg" alt="template image"/>
 				</div>
@@ -88,7 +88,7 @@
 		</article>
 		<article>
 			<a href="https://www.google.com">
-				<h3>Template</h3>
+				<h3>Lines</h3>
 				<div class="frame">
 					<img src="../images/template.jpg" alt="template image"/>
 				</div>
@@ -96,7 +96,7 @@
 		</article>
 		<article>
 			<a href="https://www.google.com">
-				<h3>Template</h3>
+				<h3>Circles</h3>
 				<div class="frame">
 					<img src="../images/template.jpg" alt="template image"/>
 				</div>
@@ -104,7 +104,7 @@
 		</article>
 		<article>
 			<a href="https://www.google.com">
-				<h3>Template</h3>
+				<h3>Triangles</h3>
 				<div class="frame">
 					<img src="../images/template.jpg" alt="template image"/>
 				</div>
@@ -112,7 +112,7 @@
 		</article>
 		<article>
 			<a href="https://www.google.com">
-				<h3>Template</h3>
+				<h3>Interpolated triangles</h3>
 				<div class="frame">
 					<img src="../images/template.jpg" alt="template image"/>
 				</div>
@@ -120,7 +120,9 @@
 		</article>
 	</div>
 	
-	<a href="#page-start">Go to the beginning of the page</a>
+	<footer>
+		<a href="#page-start">Go to the beginning of the page</a>
+	</footer>
 </body>
 
 </html>
