Added code for sdl part

--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,14 @@
 		</article>
 		<article>
 			<a href="https://www.google.com">
+				<h3>Events and input</h3>
+				<div class="frame">
+					<img src="../images/template.jpg" alt="Events and input"/>
+				</div>
+			</a>	
+		</article>
+		<article>
+			<a href="https://www.google.com">
 				<h3>Making a pixel buffer</h3>
 				<div class="frame">
 					<img src="../images/SDL/pixel-buffer.png" alt="Pixel buffer"/>
