--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta name="author" content="Marat Isaw"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="./styles/main.css">
 	
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
 	<script>
@@ -41,10 +41,10 @@
 	</div>
 	<div class="content">
 		<article>
-			<a href="./setting-up-sdl.html">
+			<a href="./sdl/setting-up-sdl.html">
 				<h3>Setting up SDL</h3>
 				<div class="frame">
-					<img class="drop-shadow-filter" src="../images/SDL/SDL2Logo.png" alt="SDL2 logo"/>
+					<img class="drop-shadow-filter" src="./images/SDL/SDL2Logo.png" alt="SDL2 logo"/>
 				</div>
 			</a>	
 		</article>
@@ -52,7 +52,7 @@
 			<a href="https://www.google.com">
 				<h3>Creating a window</h3>
 				<div class="frame">
-					<img src="../images/SDL/window.png" alt="SDL2 window"/>
+					<img src="./images/SDL/window.png" alt="SDL2 window"/>
 				</div>
 			</a>	
 		</article>
@@ -60,7 +60,7 @@
 			<a href="https://www.google.com">
 				<h3>Events and input</h3>
 				<div class="frame">
-					<img src="../images/template.jpg" alt="Events and input"/>
+					<img src="./images/template.jpg" alt="Events and input"/>
 				</div>
 			</a>	
 		</article>
@@ -68,7 +68,7 @@
 			<a href="https://www.google.com">
 				<h3>Making a pixel buffer</h3>
 				<div class="frame">
-					<img src="../images/SDL/pixel-buffer.png" alt="Pixel buffer"/>
+					<img src="./images/SDL/pixel-buffer.png" alt="Pixel buffer"/>
 				</div>
 			</a>	
 		</article>
@@ -84,7 +84,7 @@
 			<a href="https://www.google.com">
 				<h3>Clearing the screen</h3>
 				<div class="frame">
-					<img src="../images/graphics/clearing-the-screen.png" alt="clearing the screen image"/>
+					<img src="./images/graphics/clearing-the-screen.png" alt="clearing the screen image"/>
 				</div>
 			</a>	
 		</article>
@@ -92,7 +92,7 @@
 			<a href="https://www.google.com">
 				<h3>Points</h3>
 				<div class="frame">
-					<img src="../images/graphics/points.png" alt="points image"/>
+					<img src="./images/graphics/points.png" alt="points image"/>
 				</div>
 			</a>	
 		</article>
@@ -100,7 +100,7 @@
 			<a href="https://www.google.com">
 				<h3>Rectangles</h3>
 				<div class="frame">
-					<img src="../images/graphics/rectangles.png" alt="rectangles image"/>
+					<img src="./images/graphics/rectangles.png" alt="rectangles image"/>
 				</div>
 			</a>	
 		</article>
@@ -108,7 +108,7 @@
 			<a href="https://www.google.com">
 				<h3>Lines</h3>
 				<div class="frame">
-					<img src="../images/graphics/lines.png" alt="lines image"/>
+					<img src="./images/graphics/lines.png" alt="lines image"/>
 				</div>
 			</a>	
 		</article>
@@ -116,7 +116,7 @@
 			<a href="https://www.google.com">
 				<h3>Circles</h3>
 				<div class="frame">
-					<img src="../images/graphics/circles.png" alt="circles image"/>
+					<img src="./images/graphics/circles.png" alt="circles image"/>
 				</div>
 			</a>	
 		</article>
@@ -124,7 +124,7 @@
 			<a href="https://www.google.com">
 				<h3>Triangles</h3>
 				<div class="frame">
-					<img src="../images/graphics/triangles.png" alt="triangles image"/>
+					<img src="./images/graphics/triangles.png" alt="triangles image"/>
 				</div>
 			</a>	
 		</article>
@@ -132,7 +132,7 @@
 			<a href="https://www.google.com">
 				<h3>Interpolated triangles</h3>
 				<div class="frame">
-					<img src="../images/graphics/interpolated-triangles.png" alt="interpolated triangles image"/>
+					<img src="./images/graphics/interpolated-triangles.png" alt="interpolated triangles image"/>
 				</div>
 			</a>	
 		</article>
