--- a/sdl/setting-up-sdl.html
+++ b/sdl/setting-up-sdl.html
@@ -14,7 +14,7 @@
 	<meta name="author" content="Marat Isaw"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="../styles/main.css">
 	
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
 	<script>
