Fixed website bugs

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
-	<link rel="icon" href="../images/favicon.png">
+	<link rel="icon" href="./images/favicon.png">
 	
 	<title>Graphics with C and SDL2</title>
 	
@@ -22,7 +22,7 @@
 	</script>
 </head>
 
-<body lass="page-start preload">
+<body id="page-start" class="preload">
 	<a class="github-fork-ribbon" href="https://github.com/xyl1t/SDL-Tutorial" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
 
 	<header>
@@ -44,7 +44,7 @@
 			<a href="./sdl/setting-up-sdl.html">
 				<h3>Setting up SDL</h3>
 				<div class="frame">
-					<img class="drop-shadow-filter" src="./images/SDL/SDL2Logo.png" alt="SDL2 logo"/>
+					<img src="./images/SDL/SDL2Logo.png" alt="SDL2 logo" class="drop-shadow-filter"/>
 				</div>
 			</a>	
 		</article>
@@ -60,7 +60,7 @@
 			<a href="https://www.google.com">
 				<h3>Events and input</h3>
 				<div class="frame">
-					<img src="./images/template.jpg" alt="Events and input"/>
+					<img src="./images/sdl/events-and-input.png" alt="Events and input" class="drop-shadow-filter"/>
 				</div>
 			</a>	
 		</article>
