--- a/sdl/setting-up-sdl.html
+++ b/sdl/setting-up-sdl.html
@@ -4,7 +4,7 @@
 
 <head>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
-	<link rel="icon" href="../images/favicon.png">
+	<link rel="icon" href="./images/favicon.png">
 	
 	<title>Graphics with C and SDL2</title>
 	
@@ -22,7 +22,7 @@
 	</script>
 </head>
 
-<body lass="page-start preload">
+<body id="page-start" class="preload">
 	<a class="github-fork-ribbon" href="https://github.com/xyl1t/SDL-Tutorial" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
 
 	<header>
