Imporved a little the way it looks on phone

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			</a>	
 		</article>
 		<article>
-			<a href="https://www.google.com">
+			<a href="./sdl/creating-a-window.html">
 				<h3>Creating a window</h3>
 				<div class="frame">
 					<img src="./images/SDL/window.png" alt="SDL2 window"/>
