fixed wrong font on title on content websites

--- a/sdl/setting-up-sdl.html
+++ b/sdl/setting-up-sdl.html
@@ -42,7 +42,7 @@
 	</div>
 	<div class="content">
 		<article>
-			<a href="https://www.google.com">
+			<a href="./template.html">
 				<h3>Command line</h3>
 				<div class="frame">
 					<img class="drop-shadow-filter" src="../images/SDL/setting-up-sdl/terminal.png" alt="terminal logo"/>
@@ -50,7 +50,7 @@
 			</a>	
 		</article>
 		<article>
-			<a href="https://www.google.com">
+			<a href="./template.html">
 				<h3>Windows, Visual Studio</h3>
 				<div class="frame">
 					<img class="drop-shadow-filter" src="../images/SDL/setting-up-sdl/visualstudio.png" alt="visual studio logo"/>
@@ -58,7 +58,7 @@
 			</a>	
 		</article>
 		<article>
-			<a href="./setting-up-sdl.html">
+			<a href="./template.html">
 				<h3>Mac OS, Xcode</h3>
 				<div class="frame">
 					<img class="drop-shadow-filter" src="../images/SDL/setting-up-sdl/xcode.png" alt="xcode logo"/>
@@ -66,7 +66,7 @@
 			</a>	
 		</article>
 		<article>
-			<a href="./setting-up-sdl.html">
+			<a href="./template.html">
 				<h3>Code Blocks</h3>
 				<div class="frame">
 					<img class="drop-shadow-filter" src="../images/SDL/setting-up-sdl/codeblocks.png" alt="xcode logo"/>
