Added feature where you can click the title and go to index.html

--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
 <body id="page-start" class="preload">
 	<a class="github-fork-ribbon" href="https://github.com/xyl1t/SDL-Tutorial" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
 
-	<!-- TODO: make the title a link to index.html -->
 	<header>
 		<h1>
-			SDL2 / C
+			<a href="./index.html">SDL2 / C</a>
 		</h1>
 		<h2>
-			Easy to follow Graphics tutorials using C and SDL2
+			<a href="./index.html">Easy to follow Graphics tutorials using C and SDL2</a>			
 		</h2>
 	</header>
 
