--- a/sdl/template.html
+++ b/sdl/template.html
@@ -30,10 +30,10 @@
 
 	<header>
 		<h1>
-			SDL2 / C
+			<a href="../index.html">SDL2 / C</a>
 		</h1>
 		<h2>
-			Easy to follow Graphics tutorials using C and SDL2
+			<a href="../index.html">Easy to follow Graphics tutorials using C and SDL2</a>			
 		</h2>
 	</header>
 	
