Added comming soon images and experimental new phone layout

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 				<h3>Creating a window</h3>
 				<div class="frame">
 					<img src="./images/SDL/window.png" alt="SDL2 window"/>
+					<img src="./images/coming-soon.png"/ style="position: absolute; top: 51px; left: 0;">
 				</div>
 			</a>	
 		</article>
@@ -61,6 +62,7 @@
 				<h3>Events and input</h3>
 				<div class="frame">
 					<img src="./images/SDL/events-and-input.png" alt="Events and input" class="drop-shadow-filter"/>
+					<img src="./images/coming-soon.png"/ style="position: absolute; top: 51px; left: 0;">
 				</div>
 			</a>	
 		</article>
@@ -69,6 +71,7 @@
 				<h3>Making a pixel buffer</h3>
 				<div class="frame">
 					<img src="./images/SDL/pixel-buffer.png" alt="Pixel buffer"/>
+					<img src="./images/coming-soon.png"/ style="position: absolute; top: 51px; left: 0;">
 				</div>
 			</a>	
 		</article>
@@ -85,6 +88,7 @@
 				<h3>Clearing the screen</h3>
 				<div class="frame">
 					<img src="./images/graphics/clearing-the-screen.png" alt="clearing the screen image"/>
+					<img src="./images/coming-soon.png"/ style="position: absolute; top: 51px; left: 0;">
 				</div>
 			</a>	
 		</article>
@@ -93,6 +97,7 @@
 				<h3>Points</h3>
 				<div class="frame">
 					<img src="./images/graphics/points.png" alt="points image"/>
+					<img src="./images/coming-soon.png"/ style="position: absolute; top: 51px; left: 0;">
 				</div>
 			</a>	
 		</article>
@@ -101,6 +106,7 @@
 				<h3>Rectangles</h3>
 				<div class="frame">
 					<img src="./images/graphics/rectangles.png" alt="rectangles image"/>
+					<img src="./images/coming-soon.png"/ style="position: absolute; top: 51px; left: 0;">
 				</div>
 			</a>	
 		</article>
@@ -109,6 +115,7 @@
 				<h3>Lines</h3>
 				<div class="frame">
 					<img src="./images/graphics/lines.png" alt="lines image"/>
+					<img src="./images/coming-soon.png"/ style="position: absolute; top: 51px; left: 0;">
 				</div>
 			</a>	
 		</article>
@@ -117,6 +124,7 @@
 				<h3>Circles</h3>
 				<div class="frame">
 					<img src="./images/graphics/circles.png" alt="circles image"/>
+					<img src="./images/coming-soon.png"/ style="position: absolute; top: 51px; left: 0;">
 				</div>
 			</a>	
 		</article>
@@ -125,6 +133,7 @@
 				<h3>Triangles</h3>
 				<div class="frame">
 					<img src="./images/graphics/triangles.png" alt="triangles image"/>
+					<img src="./images/coming-soon.png"/ style="position: absolute; top: 51px; left: 0;">
 				</div>
 			</a>	
 		</article>
@@ -133,6 +142,7 @@
 				<h3>Interpolated triangles</h3>
 				<div class="frame">
 					<img src="./images/graphics/interpolated-triangles.png" alt="interpolated triangles image"/>
+					<img src="./images/coming-soon.png"/ style="position: absolute; top: 51px; left: 0;">
 				</div>
 			</a>	
 		</article>
