--- a/sdl/setting-up-sdl.html
+++ b/sdl/setting-up-sdl.html
@@ -4,7 +4,7 @@
 
 <head>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
-	<link rel="icon" href="./images/favicon.png">
+	<link rel="icon" href="../images/favicon.png">
 	
 	<title>Graphics with C and SDL2</title>
 	
