made so that more is visible on mobile

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<h3>Creating a window</h3>
 				<div class="frame">
 					<img src="./images/SDL/window.png" alt="SDL2 window"/>
-					<img src="./images/coming-soon.png"/ style="position: absolute; top: 51px; left: 0;">
+					<img src="./images/coming-soon.png" class="coming-soon">
 				</div>
 			</a>	
 		</article>
@@ -62,7 +62,7 @@
 				<h3>Events and input</h3>
 				<div class="frame">
 					<img src="./images/SDL/events-and-input.png" alt="Events and input" class="drop-shadow-filter"/>
-					<img src="./images/coming-soon.png"/ style="position: absolute; top: 51px; left: 0;">
+					<img src="./images/coming-soon.png" class="coming-soon">
 				</div>
 			</a>	
 		</article>
@@ -71,7 +71,7 @@
 				<h3>Making a pixel buffer</h3>
 				<div class="frame">
 					<img src="./images/SDL/pixel-buffer.png" alt="Pixel buffer"/>
-					<img src="./images/coming-soon.png"/ style="position: absolute; top: 51px; left: 0;">
+					<img src="./images/coming-soon.png" class="coming-soon">
 				</div>
 			</a>	
 		</article>
@@ -88,7 +88,8 @@
 				<h3>Clearing the screen</h3>
 				<div class="frame">
 					<img src="./images/graphics/clearing-the-screen.png" alt="clearing the screen image"/>
-					<img src="./images/coming-soon.png"/ style="position: absolute; top: 51px; left: 0;">
+					<img src="./images/coming-soon.png" class="coming-soon">
+
 				</div>
 			</a>	
 		</article>
@@ -97,7 +98,8 @@
 				<h3>Points</h3>
 				<div class="frame">
 					<img src="./images/graphics/points.png" alt="points image"/>
-					<img src="./images/coming-soon.png"/ style="position: absolute; top: 51px; left: 0;">
+					<img src="./images/coming-soon.png" class="coming-soon">
+
 				</div>
 			</a>	
 		</article>
@@ -106,7 +108,8 @@
 				<h3>Rectangles</h3>
 				<div class="frame">
 					<img src="./images/graphics/rectangles.png" alt="rectangles image"/>
-					<img src="./images/coming-soon.png"/ style="position: absolute; top: 51px; left: 0;">
+					<img src="./images/coming-soon.png" class="coming-soon">
+
 				</div>
 			</a>	
 		</article>
@@ -115,7 +118,8 @@
 				<h3>Lines</h3>
 				<div class="frame">
 					<img src="./images/graphics/lines.png" alt="lines image"/>
-					<img src="./images/coming-soon.png"/ style="position: absolute; top: 51px; left: 0;">
+					<img src="./images/coming-soon.png" class="coming-soon">
+
 				</div>
 			</a>	
 		</article>
@@ -124,7 +128,8 @@
 				<h3>Circles</h3>
 				<div class="frame">
 					<img src="./images/graphics/circles.png" alt="circles image"/>
-					<img src="./images/coming-soon.png"/ style="position: absolute; top: 51px; left: 0;">
+					<img src="./images/coming-soon.png" class="coming-soon">
+
 				</div>
 			</a>	
 		</article>
@@ -133,7 +138,8 @@
 				<h3>Triangles</h3>
 				<div class="frame">
 					<img src="./images/graphics/triangles.png" alt="triangles image"/>
-					<img src="./images/coming-soon.png"/ style="position: absolute; top: 51px; left: 0;">
+					<img src="./images/coming-soon.png" class="coming-soon">
+
 				</div>
 			</a>	
 		</article>
@@ -142,7 +148,8 @@
 				<h3>Interpolated triangles</h3>
 				<div class="frame">
 					<img src="./images/graphics/interpolated-triangles.png" alt="interpolated triangles image"/>
-					<img src="./images/coming-soon.png"/ style="position: absolute; top: 51px; left: 0;">
+					<img src="./images/coming-soon.png" class="coming-soon">
+
 				</div>
 			</a>	
 		</article>
